feat: update .env.example with Firebase configuration variables and modify deploy workflow to create .env file from secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Create .env file from secret
+        run: echo "${{ secrets.ENV_FILE }}" > .env
+
       - name: Install dependencies & build project
         run: |
           npm install
           npm run build
 
-      - name: Clean old project folder
+      - name: Clean old project folder on VPS
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -34,24 +37,8 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "dist,Dockerfile,docker-compose.yml,nginx.conf,.env"
+          source: "dist,Dockerfile,docker-compose.yml,nginx.conf"
           target: "~/lots-netion"
-
-      - name: Verify .env file on VPS
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            cd ~/lots-netion
-            if [ -f .env ]; then
-              echo ".env file exists"
-              cat .env
-            else
-              echo "Error: .env file is missing!"
-              exit 1
-            fi
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.0
