--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ VPS_HOST=
 VPS_USER=
 SSH_PRIVATE_KEY=
 DISCORD_WEBHOOK_URL=
+VITE_FIREBASE_API_KEY=
+VITE_FIREBASE_AUTH_DOMAIN=
+VITE_FIREBASE_PROJECT_ID=
+VITE_FIREBASE_STORAGE_BUCKET=
+VITE_FIREBASE_MESSAGING_SENDER_ID=
+VITE_FIREBASE_APP_ID=
