--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create .env file from secret
-        run: echo "${{ secrets.ENV_FILE }}" > .env
+        run: |
+          printf "%b" "${{ secrets.ENV_FILE }}" > .env
+      
 
       - name: Install dependencies & build project
         run: |
