--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,13 @@
 name: Build & CI/CD VPS
 
 concurrency:
-  group: deploy-vps-main
+  group: deploy-vps-prod
   cancel-in-progress: false
 
 on:
   push:
     branches:
-      - main
+      - prod
 
 jobs:
   deploy:
