--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Dependencies
 node_modules/
+.pnp
+.pnp.js
+
+# Build, distribution, and test coverage
+build/
 dist/
 dist-ssr/
-
-# Environment variables
-.env
-*.local
+coverage/
 
 # Logs
 logs/
@@ -16,13 +18,24 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+!.env.example
+
 # Editor directories and files
+.idea/
 .vscode/*
 !.vscode/extensions.json
-.idea/
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# System files
+.DS_Store
+
+# Misc
+*.pdf
